# R-Type

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Release.txt  branch.drawio  compile.sh  flake.nix  format.sh  install_sfml_X11.sh  main.cpp  vcpkg.json
Client/: CMakeLists.txt  Makefile  README.md
Client/Assets/Sprites/Missiles/Collisions/: url.txt
Client/Include/: button.hpp  client.hpp  component.hpp  entity.hpp  error_handling.hpp  r_type.hpp  sprite_tools.hpp  system.hpp  texture_manager.hpp  tools.hpp
Client/Include/Components/: a_component.hpp  collision_component.hpp  component_manager.hpp  components.hpp  health_component.hpp  hitbox_component.hpp  i_component.hpp  input_component.hpp  movement_component.hpp  position_component.hpp  score_component.hpp  sprite_component.hpp
Client/Include/Entities/: a_entity.hpp  entities.hpp  entity.hpp  entity_factory.hpp  entity_manager.hpp  i_entity.hpp  i_entity_factory.hpp  player_entity.hpp
Client/Include/Systems/: a_system.hpp  i_system.hpp  system.hpp
Client/Interface/: CMakeLists.txt
Client/Interface/Include/: button.hpp  error_handling.hpp  mainmenu.hpp  netClient.hpp  net_a_client.hpp  net_client.hpp  net_i_client.hpp  r_type_client.hpp  scenes.hpp  texture_manager.hpp
Client/Interface/Include/Components/: background_component.hpp  basic_monster_component.hpp  component_manager.hpp  components.hpp  enemy_component.hpp  enemy_missile_component.hpp  health_component.hpp  hitbox_component.hpp  missile_component.hpp  on_click_component.hpp  on_hover_component.hpp  score_component.hpp  sprite_component.hpp  text_component.hpp
Client/Interface/Include/ECS/Components/: ally_missile_component.hpp  component_manager.hpp  components.hpp  sprite_component.hpp  (+1 more)
Client/Interface/Include/Entities/: entity.hpp  entity_factory.hpp  entity_manager.hpp  i_entity_factory.hpp
Client/Interface/Include/Net/: a_client.hpp  client.hpp  i_client.hpp
Client/Interface/Include/Systems/: button_system.hpp  i_system.hpp  render_system.hpp  shoot_system.hpp  system.hpp  systems.hpp  update_system.hpp
Client/Src/: CMakeLists.txt  button.cpp  client.cpp  handle_server_messages.cpp  keyToString.cpp  main.cpp  r-type_client.cpp  r_type.cpp  scenes.cpp  simpleClient.cpp  tools.cpp
Client/Src/Components/: CMakeLists.txt  collision_component.cpp  health_component.cpp  movement_component.cpp  score_component.cpp  sprite_component.cpp
Client/Src/ECS/: CMakeLists.txt
Client/Src/ECS/Entities/: entity_factory.cpp
Client/Src/ECS/Systems/: render_system.cpp
Client/Src/Entities/: CMakeLists.txt  entity.cpp  entity_factory.cpp
Client/Src/MainMenu/: CMakeLists.txt  button.cpp  display.cpp  settingsMenu.cpp
Client/Src/Systems/: CMakeLists.txt  render_system.cpp  shoot_system.cpp  system.cpp  update_system.cpp
Client/Src/Tools/: CMakeLists.txt  sprite_tools.cpp
ECS/Interface/: CMakeLists.txt
ECS/Interface/Include/: a_scenes.hpp  audio_manager.hpp  creatable_client_object.hpp  entity_struct.hpp  error_handling.hpp  font_manager.hpp  font_path.hpp  game_text.hpp  hitbox_tmp.hpp  i_scenes.hpp  macros.hpp  scenes.hpp  sound_path.hpp  sprite_path.hpp  texture_manager.hpp
ECS/Interface/Include/Components/: ally_component.hpp  ally_missile_component.hpp  animation_component.hpp  background_component.hpp  basic_monster_component.hpp  bind_component.hpp  boss_component.hpp  component_manager.hpp  components.hpp  direction_component.hpp  enemy_component.hpp  enemy_missile_component.hpp  force_missile_component.hpp  force_weapon_component.hpp  front_component.hpp  health_component.hpp  hitbox_component.hpp  input_component.hpp  label_component.hpp  link_force_component.hpp  movement_component.hpp  offset_component.hpp  on_click_component.hpp  on_hover_component.hpp  player_component.hpp  player_missile_component.hpp  position_component.hpp  power_up_component.hpp  rectangleShapeComponent.hpp  score_component.hpp  shader_component.hpp  shoot_component.hpp  sprite_component.hpp  sprite_data_component.hpp  tail_component.hpp  text_component.hpp  text_data_component.hpp  update_text_component.hpp  velocity_component.hpp  wall_component.hpp  (+1 more)
ECS/Interface/Include/Entities/: entity.hpp  entity_factory.hpp  entity_manager.hpp  i_entity.hpp  i_entity_factory.hpp
ECS/Interface/Include/Systems/: animation_system.hpp  audio_system.hpp  auto_fire_system.hpp  collision_system.hpp  i_system.hpp  move_system.hpp  render_system.hpp  system_manager.hpp  systems.hpp  update_system.hpp
ECS/Src/: CMakeLists.txt  a_scenes.cpp  font_path.cpp  game_text.cpp  hitbox_tmp.cpp  sound_path.cpp  sprite_path.cpp
ECS/Src/Components/: CMakeLists.txt
ECS/Src/Entities/: entity_factory.cpp
ECS/Src/Systems/: CMakeLists.txt  animation_system.cpp  audio_system.cpp  auto_fire_system.cpp  collision_system.cpp  move_system.cpp  render_system.cpp  update_system.cpp
Interface/: CMakeLists.txt
Interface/Include/: CustomMsgTypes.hpp  asio.hpp  entity_struct.hpp  game_struct.h  game_struct.hpp  hitbox_tmp.hpp  i_level.hpp  macro.hpp  netClient.hpp  netCommon.hpp  netConnection.hpp  netMessage.hpp  netServer.hpp  netThreadSafeQueue.hpp  net_connection.hpp  net_i_server.hpp  net_message.hpp  net_r_type.hpp  net_r_type_message.hpp  net_server_interface.hpp  net_thread_safe_queue.hpp  net_type_message.hpp  olcNet.hpp  sprite.hpp  spriteData.hpp  sprite_type.hpp
Interface/Include/Net/: common.hpp  connection.hpp  i_server.hpp  message.hpp  thread_safe_queue.hpp  type_message.hpp
Server/: CMakeLists.txt
Server/Interface/: CMakeLists.txt
Server/Interface/Include/: animation_system.hpp  level.hpp  netServer.hpp  net_a_server.hpp  net_server.hpp  net_server_abstract.hpp  r_type-server.hpp  r_type_net_server.hpp  r_type_server.hpp
Server/Interface/Include/Net/: a_server.hpp  server.hpp
Server/Src/: CMakeLists.txt  animation_system.cpp  example.cpp  main.cpp  net_server_abstract.cpp  r_type-server.cpp  server.cpp
Server/Src/ECS/: CMakeLists.txt
Server/Src/ECS/Entities/: CMakeLists.txt  entity_factory.cpp
Server/Src/ECS/Systems/: CMakeLists.txt
(+30 files in other folders)
